# Distributed-Codebase-Refactoring-Engine-Project

./: .gitignore  README.md  requirements.txt
refactoring_engine/: README.md  pyproject.toml
refactoring_engine/agents/: apply_agent.py  base.py  loader_agent.py  pattern_agent.py  suggest_agent.py
refactoring_engine/api/: main.py  schemas.py
refactoring_engine/cli/: run.py
refactoring_engine/configs/: __init__.py  rules.yaml  settings.py
refactoring_engine/core/: ast_processor.py  code_analyzer.py  engine.py  git_manager.py  refactor_rules.py  report_generator.py  router.py
refactoring_engine/tests/: test_engine.py
refactoring_engine/utils/: ast_utils.py  file_loader.py  logger.py
reports/: report_20250816_183842.md  report_20250816_184344.md
